# OpenClawdCode

./: .env.example  CLAUDE.md  CLAUDE.md.template  IMPLEMENTATION-PLAN.md  README.md  pyproject.toml  setup.sh
claude/: context.md  conventions.md  workflow.md
hooks/: session_end.py  session_start.py  user_prompt_submit.py
references/: source-algorithms.md
scripts/: index_vault.py  migrate_claudia.py
src/openclawd/: __init__.py  __main__.py  config.py  db.py  decay.py  embeddings.py  extractor.py  llm_client.py  retriever.py  server.py  vault_indexer.py
src/openclawd/tools/: knowledge_search.py  load_context.py  memory_recall.py  memory_store.py  session_log.py  vault_search.py
tasks/: lessons.md  todo.md
tests/: test_config.py  test_decay.py  test_embeddings.py  test_extractor.py  test_memory_recall.py  test_memory_store.py  test_retriever.py  test_schema_migration.py  test_vault_search.py
